Fixed an issue with the info image not showing up correctly in Chrome.

--- a/waves/sass/pages/_index.scss
+++ b/waves/sass/pages/_index.scss
@@ -21,8 +21,8 @@
     }
 
     &__photo {
-        height: 100%;
-        width: 90%;
+        height: 30rem;
+        width: 30rem;
         border-radius: 50%;
         transition: all .2s;
         box-shadow: 0 .5rem .5rem rgba($color-black, .1);
